--- a/src/MainPage/Team/TeamPicture/index.css
+++ b/src/MainPage/Team/TeamPicture/index.css
@@ -1,6 +1,7 @@
 section.team .team-pictures .figure {
   width: 200px;
   height: 200px;
+  border-radius: 2rem;
   vertical-align: top;
   margin: 18px auto;
   max-width: 200px;
